// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Delete Modal component > renders loading modal 1`] = `
<DocumentFragment>
  <osds-modal
    color="warning"
    dismissible="true"
    headline="headline"
  >
    <osds-text
      class="block my-4"
      color="text"
      level="body"
    >
      description
    </osds-text>
    <osds-form-field
      class="mb-8"
    >
      <div
        slot="label"
      >
        <osds-text
          class="block mb-3"
          color="text"
          level="body"
          size="200"
        >
          deleteInputLabel
        </osds-text>
      </div>
      <osds-input
        aria-disabled="true"
        aria-label="delete-input"
        disabled="true"
        internals-disabled=""
        type="text"
        value=""
      />
    </osds-form-field>
    <div
      class="flex justify-center"
    >
      <osds-spinner
        inline="true"
        size="md"
      />
    </div>
    <osds-button
      color="primary"
      disabled="true"
      slot="actions"
      type="button"
      variant="ghost"
    >
      Annuler
    </osds-button>
    <osds-button
      color="primary"
      disabled="true"
      slot="actions"
      type="button"
      variant="flat"
    >
      Résilier
    </osds-button>
  </osds-modal>
</DocumentFragment>
`;

exports[`Delete Modal component > renders loading modal 2`] = `
<DocumentFragment>
  <osds-modal
    color="warning"
    dismissible=""
    headline="Résilier mon serviceType ?"
  >
    <osds-text
      class="block my-4"
      color="text"
      hue="500"
      level="body"
      size="100"
      style="--osds-text-color-specific-hue: var(--ods-color-text-500);"
    >
      La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
    </osds-text>
    <div
      class="flex justify-center"
    >
      <osds-spinner
        inline=""
        mode="INDETERMINATE"
        role="progressbar"
        size="md"
      />
    </div>
    <osds-button
      color="primary"
      disabled=""
      size="md"
      slot="actions"
      tabindex="-1"
      text-align="center"
      type="button"
      variant="ghost"
    >
      deleteModalCancelButton
    </osds-button>
    <osds-button
      color="primary"
      disabled=""
      size="md"
      slot="actions"
      tabindex="-1"
      text-align="center"
      type="button"
      variant="flat"
    >
      deleteModalDeleteButton
    </osds-button>
  </osds-modal>
</DocumentFragment>
`;

exports[`Delete Modal component > renders loading modal 3`] = `
<DocumentFragment>
  <osds-modal
    color="warning"
    dismissible=""
    headline="Résilier mon serviceType ?"
  >
    <osds-text
      class="block my-4"
      color="text"
      hue="500"
      level="body"
      size="100"
      style="--osds-text-color-specific-hue: var(--ods-color-text-500);"
    >
      La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
    </osds-text>
    <div
      class="flex justify-center"
    >
      <osds-spinner
        inline=""
        mode="INDETERMINATE"
        role="progressbar"
        size="md"
      />
    </div>
    <osds-button
      color="primary"
      disabled=""
      size="md"
      slot="actions"
      tabindex="-1"
      text-align="center"
      type="button"
      variant="ghost"
    >
      Non, refuser
    </osds-button>
    <osds-button
      color="primary"
      disabled=""
      size="md"
      slot="actions"
      tabindex="-1"
      text-align="center"
      type="button"
      variant="flat"
    >
      Oui, résilier
    </osds-button>
  </osds-modal>
</DocumentFragment>
`;
